# TerminalTextEditorWindows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.bat
src/: Editor.cpp  Editor.h  FileBuffer.cpp  FileBuffer.h  Terminal.cpp  Terminal.h  config.h  main.cpp
